@@ -21,7 +21,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.modules>java.xml.bind,java.xml.ws</java.modules>
 		<java.version>9</java.version>
+
+		<apache-cxf-version>3.2.1</apache-cxf-version>
+		<javax-xml-api-version>2.3.0</javax-xml-api-version>
 	</properties>
 
 	<dependencies>
@@ -33,6 +37,27 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+			<version>${apache-cxf-version}</version>
+		</dependency>
+
+		<!--
+			javax.xml.ws and sub modules are deprecated and for removal since Java9
+			(http://enos.itcollege.ee/~jpoial/docs/docs9/api/java.xml.ws-summary.html)
+			But Spring Boot and Apache CXF need them, so here we add the dependency explicitly
+		-->
+		<dependency>
+			<groupId>javax.xml.ws</groupId>
+			<artifactId>jaxws-api</artifactId>
+			<version>${javax-xml-api-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${javax-xml-api-version}</version>
 		</dependency>
 
 		<dependency>
@@ -48,6 +73,41 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>${java.modules}</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxws-maven-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>wsimport</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<wsdlUrls>
+						<wsdlUrl>http://127.0.0.1:8080/server/api/soap/WeatherEndpoint?wsdl</wsdlUrl>
+					</wsdlUrls>
+					<sourceDestDir>target/generated-sources/wsdlimport/WeatherEndpoint</sourceDestDir>
+					<executable>${java.home}/bin/wsimport</executable>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
